syntax = "proto3";

option go_package = "pusher/";

package com.NimbusIM.proto.pusher;

service KafkaPusher {
  rpc PushToKafka(PusherKafkaRequest) returns (PusherKafkaResponse) {};
  rpc PushToKafkaDelay(PusherKafkaDelayRequest) returns (PusherKafkaDelayResponse) {};
}

message PusherKafkaRequest {
  int64 id = 1;
  string topic = 2;
  string data = 3;
}

message PusherKafkaResponse {
  int64 id = 1;
}

message PusherKafkaDelayRequest {
  int64 id = 1;
  string topic = 2;
  string data = 3;
  DelayEnum delay = 4;
}

message PusherKafkaDelayResponse {
  int64 id = 1;
}

enum DelayEnum {
  _DelayEnumUnknown = 0;
  DelayEnum1m = 1;
  DelayEnum3m = 2;
  DelayEnum10m = 3;
  DelayEnum15m = 4;
  DelayEnum30m = 5;
}